# docs/swagger.json
@@ -57,6 +57,15 @@
                         "name": "token",
                         "in": "header",
                         "required": true
+                    },
+                    {
+                        "description": "Dentist to store",
+                        "name": "odontologo",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/domain.Odontologo"
+                        }
                     }
                 ],
                 "responses": {
@@ -111,6 +120,15 @@
                 "summary": "Update Dentist",
                 "parameters": [
                     {
+                        "description": "Dentist to update",
+                        "name": "odontologo",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/domain.Odontologo"
+                        }
+                    },
+                    {
                         "type": "string",
                         "description": "id param",
                         "name": "id",
@@ -150,6 +168,13 @@
                         "name": "id",
                         "in": "path",
                         "required": true
+                    },
+                    {
+                        "type": "string",
+                        "description": "token",
+                        "name": "token",
+                        "in": "header",
+                        "required": true
                     }
                 ],
                 "responses": {
@@ -180,6 +205,18 @@
                         "name": "id",
                         "in": "path",
                         "required": true
+                    },
+                    {
+                        "description": "Dentist to patch",
+                        "name": "odontologo",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "type": "object",
+                            "additionalProperties": {
+                                "type": "string"
+                            }
+                        }
                     },
                     {
                         "type": "string",
